--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,25 @@
 .card{
   /* width: 350px; */
-  width: 90%;
+
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  background-color: rgb(20, 26, 31);
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  box-shadow: 2px 2px 10px black, 2px 2px 20px black;
+  border-radius: 10px;
+  transition: all 0.2s;
+  cursor: pointer;
+
+  flex-shrink: 0;
+
+
+  /* width: 90%;
   max-width: 380px;
   height: 160px;
   background-color: rgb(20, 26, 31);
@@ -15,7 +34,7 @@
   transition: all 0.2s;
   cursor: pointer;
 
-  flex-shrink: 0;
+  flex-shrink: 0; */
 }
 
 .card:hover{
