--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -49,6 +49,26 @@
 
 }
 
+.card-link{
+  width: 90%;
+  max-width: 380px;
+  height: 160px;
+  background-color: rgb(20, 26, 31);
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  box-shadow: 2px 2px 10px black, 2px 2px 20px black;
+  border-radius: 10px;
+  transition: all 0.2s;
+  cursor: pointer;
+
+  flex-shrink: 0;
+  text-decoration: none;
+}
+
 
 
 @media (max-width: 768px) {
